// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getItemsData вернет favorite 1`] = `
Array [
  "auc",
  "fresh",
  "turbo",
  "spec",
  "premium",
  "favorite",
]
`;

exports[`getItemsData вернет набор васов для бу 1`] = `
Array [
  "fresh",
  "turbo",
  "spec",
  "premium",
  "favorite",
]
`;

exports[`getItemsData вернет набор васов для бу аукцион 1`] = `
Array [
  "auc",
  "spec",
  "favorite",
]
`;
